docs/tests/typing/bad/testfile-return-3.cpp

class S { public: int a; };
int main() { S s; return s; }

